[gd_scene load_steps=3 format=3 uid="uid://db0oirvh2jt4m"]

[ext_resource type="Script" uid="uid://b05m434vn8jxc" path="res://scripts/upgrades/neuro/lava_lamp.gd" id="1_6i45p"]
[ext_resource type="Script" uid="uid://bxw2fv1p15ncf" path="res://scripts/shared/ai_cooldown_timer.gd" id="2_wkrqr"]

[node name="LavaLamp" type="Node2D"]
script = ExtResource("1_6i45p")

[node name="FireTimer" type="Timer" parent="."]
autostart = true
script = ExtResource("2_wkrqr")

[node name="ColorTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="ColorTimer" to="." method="_on_color_timer_timeout"]
